.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Hardcode utf-8 for UnicodeSplitter, since Hanno says that's all we
  can accept and there's no way to use getSiteEncoding from the splitter.
  [alecm]

- Added option to skip the creation of the default example content in the new
  add site form. Grouped the add-ons selection via a fieldset.
  [hannosch]

- Refactored the old factory dispatcher / addPloneSiteForm to use a modern
  browser page instead.
  [hannosch]

- Removed the special default page and translation handling. LinguaPlone uses
  a content language negotiator per default instead.
  [hannosch]

- Replaced highlightsearchterms.js with the Plone trunk
  jquery.highlightsearchterms.js plugin. This removes the need to add
  searchterm= query parameters to search.pt results.
  Refs. http://dev.plone.org/plone/ticket/8770
  [mj]

- Add a link to log out from the logged_out template if logged in as a Zope
  user via basic HTTP Authentication and the standard logout failed.
  [davisagli]

- Removed the cut/copy/paste icons from the action menu in new sites, as they
  just add noise + more HTTP requests.
  [limi]

- Moved happytalk in site_feedback_template.pt and author_feedback_template.pt
  to bottom of emails, per http://dev.plone.org/plone/ticket/7001
  [jonstahl]
  
- Added precedence: bulk header to several PasswordReset's
  mail_password_template, per http://dev.plone.org/plone/ticket/7000 - still
  haven't added this header to CMFPlone templates.
  [jonstahl]

- Added the upgrade warning to the main control panel screen. This is the same
  as found on the new overview page.
  [hannosch]

- Changed the new default overview page to be a normal browser page and made
  it aware of multiple Plone sites in the root or in ZODB mountpoints.
  [hannosch, davisagli]
