@@ -79,12 +79,12 @@ We edit the document properties:
 We make sure the language is neutral at the beginning:
 
     >>> browser.getControl(name='language').displayValue
-    ['Language neutral (site default)']
+    ['English']
 
 And the content language is set to the default:
 
     >>> browser.headers.dict['content-language']
-    ''
+    'en'
 
 Now set the language to German:
 
